crates/parser/tests/parse/type-malformed.snap
---
source: crates/parser/tests/parse.rs
---
ROOT@0..104
  MODULE@0..103
    L_PAREN@0..1 "("
    KEYWORD@1..7 "module"
    WHITESPACE@7..10 "\n  "
    MODULE_FIELD_TYPE@10..48
      L_PAREN@10..11 "("
      KEYWORD@11..15 "type"
      WHITESPACE@15..16 " "
      SUB_TYPE@16..47
        FUNC_TYPE@16..47
          L_PAREN@16..17 "("
          KEYWORD@17..21 "func"
          WHITESPACE@21..22 " "
          RESULT@22..34
            L_PAREN@22..23 "("
            KEYWORD@23..29 "result"
            WHITESPACE@29..30 " "
            NUM_TYPE@30..33
              TYPE_KEYWORD@30..33 "i32"
            R_PAREN@33..34 ")"
          WHITESPACE@34..35 " "
          ERROR@35..36 "("
          ERROR@36..41 "param"
          WHITESPACE@41..42 " "
          ERROR@42..45 "i32"
          ERROR@45..46 ")"
          R_PAREN@46..47 ")"
      R_PAREN@47..48 ")"
    WHITESPACE@48..51 "\n  "
    MODULE_FIELD_TYPE@51..80
      L_PAREN@51..52 "("
      KEYWORD@52..56 "type"
      WHITESPACE@56..57 " "
      SUB_TYPE@57..79
        FUNC_TYPE@57..79
          L_PAREN@57..58 "("
          KEYWORD@58..62 "func"
          WHITESPACE@62..63 " "
          RESULT@63..78
            L_PAREN@63..64 "("
            KEYWORD@64..70 "result"
            WHITESPACE@70..71 " "
            ERROR@71..73 "$x"
            WHITESPACE@73..74 " "
            NUM_TYPE@74..77
              TYPE_KEYWORD@74..77 "i32"
            R_PAREN@77..78 ")"
          R_PAREN@78..79 ")"
      R_PAREN@79..80 ")"
    WHITESPACE@80..83 "\n  "
    MODULE_FIELD_TYPE@83..89
      L_PAREN@83..84 "("
      KEYWORD@84..88 "type"
      R_PAREN@88..89 ")"
    WHITESPACE@89..92 "\n  "
    MODULE_FIELD_TYPE@92..101
      L_PAREN@92..93 "("
      KEYWORD@93..97 "type"
      WHITESPACE@97..98 " "
      ERROR@98..99 "("
      ERROR@99..100 ")"
      R_PAREN@100..101 ")"
    WHITESPACE@101..102 "\n"
    R_PAREN@102..103 ")"
  WHITESPACE@103..104 "\n"

error: expected `result`
  ┌─ type-malformed.wat:2:29
  │
2 │   (type (func (result i32) (param i32)))
  │                             ^^^^^^^^^^

error: expected value type
  ┌─ type-malformed.wat:3:23
  │
3 │   (type (func (result $x i32)))
  │                       ^^

error: expected `(`
  ┌─ type-malformed.wat:4:8
  │
4 │   (type)
  │        ^

error: expected `sub`
  ┌─ type-malformed.wat:5:10
  │
5 │   (type ())
  │          ^
